--- a/source/sub_related_works.tex
+++ b/source/sub_related_works.tex
@@ -1,75 +1,70 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
+\section{加密世界中的监管与自我监管}
 
+大多数部署在以太坊、Solana等区块链上的DAO并不受任何政府或法律的监督。智能合约将简单地按照其编程执行。与其受到正式流程和机构的监督，DAOs是由部署智能合约的实体自我调节的。值得注意的是，他们可以通过投票决定更改规则或更新DAO的智能合约。每个DAO都可以像公司、基金或非营利社区一样运作。代币持有者将通过投票决定如何运行DAO。DAO的概念是由Christoph Jentzsch发明的\cite{dao_paper}，他是DAO概念的创造者和第一篇DAO论文的作者。尽管最初存在争议，但DAO概念现在在加密世界中非常流行并被广泛使用，导致以太坊社区分裂为当前的“新”以太坊和原始未分叉的“以太坊经典”。
 
-\section{Regulation and self-regulation in the crypto world}
+尽管DAO是自我调节的，但它们仍然可以被政府监管，许多政府正试图通过为DAO提供立法服务来监管加密世界，将它们置于政府和税法之下。这允许DAO在注册公司的管理下运行，并从事提供服务、支付和提供产品等商业活动。然而，这些受政府监管的DAO没有完全自我调节DAO那样的自由度。政府监管的DAO不是建立在去中心化基础设施之上的，政府仍然可以通过税法和股市法律来监管它们。虽然这些受监管的DAO可能不像自我调节的DAO那样受欢迎，但政府正在积极探索各种方式来监管加密世界。
 
-Most of the DAOs deployed to blockchains such as Ethereum, Solana, and others are not supervised by any governments or laws. The smart contract will simply execute as specified by its programming. Rather than being supervised by formal processes and bodies, the DAOs are self-regulated by the entities deploying the smart contracts. Notably, they can decide to change the rules or update the smart contract of the DAOs by voting. Each DAO can function as a company, fund, or non-profit community. The token holders will vote and decide how to run the DAO. The DAO was invented by Christoph Jentzsch \cite{dao_paper}, the creator of The DAO concept and the author of the first DAO paper. Despite its initial divisiveness, the DAO concept is now very popular and widely used in the crypto world, leading to the Ethereum community split into the current "new" Ethereum and the original unforked "Ethereum Classic."
+另一种运行DAO的方式是不涉及任何法律实体，而大多数DAO今天都是以这种方式运作的。所有操作都由社区代币拥有者提议并投票决定。拥有者可以从去中心化交易所（DEX）如Uniswap和中心化交易所（CEX）如Coinbase、Binance和FTX购买代币，并参与投票过程以决定如何运行DAO。这些DAO的核心贡献者和管理者在智能合约中定义DAO的规则，主要使用Solidity用于以太坊和Rust用于Solana。他们决定它是开源的还是私有的，定义谁可以发起提案，并设置投票规则，如提案持续时间、投票批准门槛和用新代币铸造的投票奖励。
 
-Though DAOs are self-regulated, they can still be regulated by governments, and many governments are trying to regulate the crypto world by providing legislation services for DAOs, regulating them under government and tax laws. This allows a DAO to run under the management of a registered company and engage in business activities such as providing services, making payments, and offering products. However, these regulated DAOs do not have the same level of freedom as fully self-regulated DAOs. Government-regulated DAOs are not built on top of a decentralized infrastructure, and governments can still regulate them through tax and stock market laws. While these regulated DAOs may not be as popular as self-regulated DAOs, governments are actively exploring various ways to regulate the crypto world.
+\subsection{当前流行DAO的设计}
 
-Another way to run a DAO is without any legal entity, and most DAOs today operate in this fashion. All operations are proposed and voted on by the community token owners. The owners can buy tokens from decentralized exchanges (DEX) such as Uniswap and centralized exchanges (CEX) such as Coinbase, Binance, and FTX, and participate in the voting process to decide how to run the DAO. The core contributors and managers of these DAOs define the rules of the DAO in smart contracts, primarily using Solidity for Ethereum and Rust for Solana. They decide whether it's open source or private, define who can start a proposal, and set the voting rules such as proposal duration, voting approval threshold, and voting award with the minting of new tokens.
+DAO的设计随着时间的推移而演变，变得更加复杂并引入了额外的功能。随着在旧DAO中发现的缺陷、漏洞和效率低下问题，当前流行的DAO作为这些问题的解决方案而出现。一些今天流行的DAO包括Aragon、Moloch和DAOStack等。
 
-\subsection{Current designs of popular DAOs}
+在设计得当的DAO中，一个显著的特征是存在完全功能的用户界面用于DAO治理。这些努力旨在吸引那些不熟悉区块链编码或编码知识有限的个人，通过用户友好的界面实现。这些DAO不需要太多的技术专长就可以参与，而不牺牲简洁性的任何功能。另一个共同特点是在DAO治理的基本方面实施额外限制：投票。例如，Moloch采用加权投票而不是每个代币一票，而Aragon利用模块化的“法庭”作为争议解决机制，以防止51％攻击和恶意提案。大多数流行的DAO也以模块化或分隔的方式构建，从而受益于增强的组织和可扩展性，这是许多DAO的关键焦点。例如，Aragon包括各种组，如所有代币持有者的组、执行子DAO、合规子DAO和技术组。
 
-The design of DAOs has evolved over time, becoming more complex and incorporating additional features. As flaws, vulnerabilities, and inefficiencies were identified in older DAOs, current popular ones have emerged as resolutions to these issues. Some popular DAOs today include Aragon, Moloch, and DAOStack, among others.
+虽然这些DAO共享几个特征，但它们通过其独特的关键特征而有所区别。Moloch在多个方面脱颖而出。最初，它采用了许可成员制，只允许现有成员投票决定是否添加新成员。Moloch还引入了“ragequit”功能，使成员能够将所有会员股份换成财务资产。此外，提案在有资格投票前需要赞助，且接受的提案执行前有宽限期。DAO内的权力不可转让并不是一个独特的方面。在Moloch v2中，引入了几个新功能，这些功能显著塑造了当前DAO的格局。这些功能包括支持多类代币，允许使用多达200种代币而不仅仅是一种，资金提案，对非成员开放提交，一个“GuildKick”机制以移除恶意成员等等。
 
-One prominent feature among well-designed DAOs is the presence of a fully functional user interface for DAO governance. Efforts are made to reach out to individuals who are not familiar with blockchain coding or have limited coding knowledge, achieved through user-friendly interfaces. These DAOs require less technical expertise to participate without sacrificing any features for simplicity. Another common feature is the implementation of additional restrictions on a fundamental aspect of DAO governance: voting. For instance, Moloch adopts weighted voting instead of one vote per token, while Aragon utilizes a modular "court" as a dispute resolution mechanism to prevent 51\% attacks and malicious proposals. Most popular DAOs are also structured in a modular or compartmentalized manner, benefiting from enhanced organization and scalability, which are key focal points for many DAOs. Aragon, for example, incorporates various groups such as a group for all token holders, an executive sub-dao, a compliance sub-dao, and a tech group.
+另一个独特的特征可以在DAOStack中找到，它是今天流行的一个DAO。它融入了“全息共识”，这是解决提案数量过多和决策要求带来挑战的一种方法。这种方法使得一个小组可以代表大多数人投票，与他们的愿望一致。DAOStack还采用了一种与投票权力不相关的单独指标称为“声誉”。这种方法旨在防止出现财富统治，根据他们的信念。
 
-While these DAOs share several characteristics, they are differentiated by their unique key features. Moloch stands out in various aspects. Initially, it employed permissioned membership, allowing only existing members to vote on the addition of new members. Moloch also introduced a "ragequit" feature, enabling members to exchange all membership shares for treasury assets. Additionally, proposals required sponsorship before being eligible for voting, and a grace period was enforced for the execution of accepted proposals. Non-transferable power within the DAO is not necessarily a unique aspect. In Moloch v2, several new features were introduced, significantly shaping the current landscape of DAOs. These features include multi-class token support, allowing the use of up to 200 tokens instead of just one, funding proposals, open submissions for non-members, a "GuildKick" mechanism to remove malicious members, and more.
+总的来说，DAO正在迅速发展，它们当前的设计差异很大。我们注意到了向提高安全性和可扩展性转变的显著转变。这种转变源于过去和现在的成员由于恶意行为者利用非限制性和简单结构而损失资产的实例。人们正努力提高投票、提案提交、成员资格和其他方面的安全性和健壮性，同时强调促进所有人的轻松和高效使用。然而，随着更多DAO的出现和对DAO行业的投资显著增加，它们有必要彼此区分开来。因此，我们观察到Aragon、Moloch和DAOStack具有不同的特征，每个特征都试图解决不同的挑战或创建新工具。可以肯定地说，DAOs还有很大的改进空间，我们预计未来的DAO设计将与现在大不相同。
 
-Another distinctive feature can be found in DAOStack, a popular DAO today. It incorporates ``holographic consensus,'' which addresses challenges arising from an overwhelming number of proposals and decision-making requirements. This approach enables a small group to vote on behalf of a larger majority, aligning with their desires. DAOStack also employs a separate metric called "reputation" instead of correlating tokens to voting power. This approach aims to prevent the emergence of a plutocracy, according to their belief.
+\subsection{``一代币一票''与多类代币投票}
 
-Overall, DAOs are rapidly evolving, and their current designs vary significantly. There has been a notable shift in focus towards enhancing security and scalability. This shift stems from past and present instances of members losing their assets due to malicious actors exploiting non-restrictive and simplistic structures. Efforts are being made to enhance the security and robustness of voting, proposal submission, membership, and other aspects, alongside a strong emphasis on facilitating easy and efficient usage for all. However, as more DAOs emerge and investment in the DAO industry increases significantly, it becomes necessary for them to differentiate themselves from one another. As a result, we observe different features in Aragon, Moloch, and DAOStack, each attempting to address distinct challenges or create new tools. It is safe to say that there is still much room for improvement in DAOs, and we anticipate that future DAO designs will differ significantly from the present.
+大多数DAO通过创建提案、将其提交给社区并进行社区投票来做出决策。社区成员可以将代币发送到DAO智能合约，智能合约然后计算票数并决定提案的批准或拒绝。每个代币代表一票，票数多数决定结果。然而，大多数DAO中对``多数''代币拥有者缺乏规定或限制，可能会造成重大的安全和安全风险。例如，如果联合创始人持有49.9％的总代币，并承诺在项目启动时将剩余的50.1％出售给社区，他们可以通过匿名购买0.2％的代币重新获得控制权。没有超出多数投票的规定，联合创始人可以无限制地铸造新代币或提取资金。
 
+相比之下，现代公司持有股票遵循内部章程或公共规定，关于``后续公开发行（FPOs）''等流程。联合创始人和大股东必须向公众披露FPO信息，并且FPO受到总股数的限制。政府或监管机构，如美国证券交易委员会、中国证监会或香港证券及期货事务监察委员会，根据股市法律对FPO进行监管。在私人公司中，联合创始人和大股东可以通过称为``私人配售''的过程发行更多股份，但这不受股市法律的监管。然而，他们仍然需要向公众披露有关私人配售的信息。早期投资者面临严格的股份限制，如锁定期、归属期和他们可以出售的股份数量限制。联合创始人和大股东还必须披露有关这些限制的信息。此外，不同的股东和股份可能有附加的限制，如非稀释股份、反稀释股份和超级投票股份，这些都必须向公众披露。
 
-\subsection{``One token, one vote'' vs multi-class-token vote}
+在现代股份公司中，虽然重大问题需要所有人投票，但日常运营通常由高管和董事会审查和批准，而不是通过所有股东的普遍投票。相比之下，许多DAO今天完全依靠全员投票来批准社区提案，这可能既低效又耗时。DAOs通常设定投票门槛，例如51％的票数，如果达到门槛，则提案被批准。他们还设定投票持续时间，例如一天，如果持续时间满足，则提案被批准。一些DAO提供投票奖励，例如总代币的1％，分发给多数投票者。此外，为了防止连续的提案过多，DAOs通常设定创建提案的最低代币持有门槛，例如10％。因此，大多数代币持有者除非满足最低代币要求，否则不被允许创建提案。DAO提案机制可以设计为一个阻塞队列，代币持有者必须等待之前的提案关闭才能创建新的提案。这需要为DAOs设计一个多级层次结构，使得多类代币投票系统成为可能。
 
-Most DAOs make decisions by creating proposals, submitting them to the community, and conducting community votes. Community members can vote by sending tokens to the DAO smart contract, which then counts the votes and determines the approval or rejection of the proposal. Each token represents one vote, and the majority of votes determines the outcome. However, the lack of regulations or restrictions on the ``majority'' of token owners in most DAOs can create significant safety and security risks. For example, if the co-founders hold 49.9\% of the total tokens and promise to sell the remaining 50.1\% to the community during project launch, they can regain control by purchasing 0.2\% of tokens anonymously. Without regulations beyond majority voting, the co-founders can mint new tokens or withdraw funds without limitations.
+从现代股份公司中学到的另一个教训是``超级投票股''的概念。在联合股份公司中，超级投票股的投票权比普通股更高，为股东在公司决策过程中提供更大的影响力。超级投票股的所有者在股东大会上可能拥有更多的投票权或对特定决策拥有否决权。公司通常使用超级投票股来授予创始人、高管或关键利益相关者对公司方向的更大控制权。虽然这可以使领导层与长期利益保持一致，但它也可能造成利益冲突，并引发关于问责制和公平性的担忧。
 
-In comparison, modern corporations with stocks follow internal by-laws or public regulations regarding processes like ``follow-on public offerings (FPOs).'' Co-founders and major shareholders must disclose FPO information to the public, and FPOs are limited by the total number of shares. Government or regulatory agencies, such as the U.S. Securities and Exchange Commission, China Securities Regulatory Commission, or Hong Kong Securities and Futures Commission, regulate FPOs according to stock market laws. In private companies, co-founders and major shareholders can issue more shares through a process called "private placement," which is not regulated by stock market laws. However, they are still required to disclose information about the private placement to the public. Early-stage investors face strict restrictions on their shares, such as lock-up periods, vesting periods, and limits on the number of shares they can sell. Co-founders and major shareholders must also disclose information about these restrictions. Moreover, different shareholders and shares may have additional restrictions, such as non-dilution shares, anti-dilution shares, and super-voting shares, which must be disclosed to the public.
+在公司治理中使用超级投票股可能是有争议的，因为它给予少数个人对公司的不成比例影响。因此，法律和政策对超级投票股的使用进行了规定，以平衡不同利益相关者的利益。值得考虑将这一概念作为设计DAOs的潜在方式，尽管应谨慎地考虑使用超级投票股，同时考虑公司治理原则。
 
-In modern stock corporations, while major issues require all-hands voting, daily operations are typically reviewed and approved by executives and the board of directors, rather than by a general vote from all shareholders. In contrast, many DAOs today solely rely on all-hands voting to approve community proposals, which can be inefficient and time-consuming. DAOs often set a voting threshold, such as 51\% of the votes, and a proposal is approved if the threshold is reached. They also establish a voting duration, such as one day, and a proposal is approved if the duration is met. Some DAOs offer a voting reward, such as 1\% of the total tokens, which is distributed to the majority voters. Additionally, to prevent excessive sequential proposals, DAOs usually set a minimum token ownership threshold for creating a proposal, for example, 10\%. Consequently, most token owners are not allowed to create proposals unless they meet the minimum token requirement. DAO proposal mechanisms can be designed as a blocking queue, where token owners must wait for the closure of previous proposals before creating new ones. This necessitates a multi-class hierarchy design for DAOs, enabling a multi-class-token voting system.
+\subsection{公司章程和程序}
 
-Another lesson from modern stock corporations is the concept of "super-voting shares." In joint-stock companies, super-voting shares have higher voting power than regular shares, providing owners with greater influence over decision-making processes within the company. Owners of super-voting shares may have more votes per share at shareholder meetings or the power to veto specific decisions. Companies often use super-voting shares to grant founders, executives, or key stakeholders more control over the company's direction. While this can align leadership with long-term interests, it may also create conflicts of interest and raise concerns about accountability and fairness.
+公司的章程包括规定其内部运营和管理的规则和规定。这些章程涵盖各种主题，包括组织结构、官员和董事责任、会议和投票程序以及股份发行和转让规则。
 
-The use of super-voting shares in corporate governance can be controversial, as it gives a small group of individuals disproportionate influence over the company. Consequently, laws and policies regulate the use of super-voting shares to balance the interests of different stakeholders. It is worth considering this concept as a potential way to design DAOs, although the use of super-voting shares should be approached carefully, taking into account corporate governance principles.
+通常，董事会通过公司的章程，然后必须由股东批准。这些章程的目的是为公司的治理和决策过程建立一个清晰和一致的框架。它们定期被审查和更新，以与任何运营或法律变化保持一致。
 
-\subsection{By-laws and procedure}
+在某些情况下，来自政府机构或行业机构的外部规定也可能适用于公司的章程。例如，上市公司必须确保遵守证券法律和其他相关规定。尽管如此，章程主要作为一个内部文件，以确保公司的顺利和有效运作。
 
-The by-laws of a company consist of the rules and regulations that govern its internal operations and management. These by-laws cover various topics, including the organizational structure, officer and director responsibilities, meeting and voting procedures, and rules for share issuance and transfer.
+在自我调节的公司中，章程侧重于定义禁止的行为，而不是允许的行为。它们提供了解决未来可能出现的问题的程序。
 
-Typically, the board of directors adopts the company's by-laws, which must then be approved by the shareholders. The purpose of these by-laws is to establish a clear and consistent framework for the company's governance and decision-making processes. They are regularly reviewed and updated to align with any operational or legal changes.
+然而，在当前的DAO设计中，通常只有一种程序：多数投票。大多数DAO只对投票过程施加限制或规定，如投票门槛、持续时间、奖励和提案创建的最低代币要求。然而，没有章程概述禁止的行为或建立解决潜在问题的程序。因此，大股东可以轻易地通过提出损害小股东的行动来控制DAO，例如稀释他们的代币持有量，或执行“rug pull”提案以从DAO中提取资金。在这种情况下，DAO缺乏通过智能合约代码或社区监督的自我调节。随着决策完全依赖于多数投票，大股东可以操纵DAO并提出对他们有利但对他人不利的提案，导致“暴政多数”情景。
 
-In some cases, external regulations from government agencies or industry bodies may also apply to a company's by-laws. For instance, publicly traded companies must ensure compliance with securities laws and other relevant regulations. Nonetheless, by-laws primarily serve as an internal document to ensure the company's smooth and effective operation.
+在健康、稳定和健全的商业实体中，如联合股份公司或非营利组织，章程对于定义禁止的行为和建立解决潜在未来问题的程序至关重要。股东、核心高管和董事会必须在加入或投资之前设定组织内的运营和权利界限。这使他们能够预防利益冲突并解决潜在问题。同样，在DAO的设计中，章程对于在其他代币所有者可以从他们那里购买代币之前对不同的代币所有者施加额外的限制至关重要。这种方法超出了简单的代币投票，因为仅依靠投票来解决所有提案不能解决所有问题，甚至可能通过通过“暴政多数”提案来创造进一步的问题。
 
-In a self-regulated corporation, the by-laws focus on defining what actions are prohibited rather than what is permissible. They provide procedures for resolving potential issues that may arise in the future.
+\subsection{``代币经济''与``分红''}
 
-However, in the current design of DAOs, there is typically only one procedure: majority voting. Most DAOs only impose restrictions or regulations related to the voting process, such as voting thresholds, durations, awards, and minimum token requirements for proposal creation. However, there is no by-law that outlines prohibited actions or establishes procedures for addressing potential issues. As a result, major shareholders can easily control DAOs by proposing actions that harm minority shareholders, such as diluting their token holdings, or by executing "rug pull" proposals to drain funds from the DAOs. In this context, DAOs lack self-regulation through smart contract codes or community oversight. With decision-making solely dependent on majority voting, major shareholders can manipulate DAOs and create proposals that benefit themselves at the expense of others, leading to a "Tyrannical Majority" scenario.
+对于DAO和其他加密项目（SocialFi、GameFi或其他协议），代币经济通常被用作吸引和留住投资者的手段，与分红相比。代币经济是指在加密货币系统内设计和实施代币的研究。它涉及创建一个代币，这是用于特定加密货币生态系统内交换的数字资产。代币在系统内代表价值，使得购买和销售商品和服务成为可能，以及激励期望的行为。代币的经济设计对于加密货币的整体成功至关重要，因为它决定了其随着时间的推移的效用和价值。一个设计良好的代币经济有助于确保加密货币的长期可行性和稳定性。
 
-In healthy, stable, and robust business entities like joint-stock companies or non-profit organizations, by-laws are crucial for defining what actions are prohibited and establishing procedures to address potential future problems. Shareholders, core executives, and the board of directors must set the boundaries of operations and rights within the organization before joining or investing. This enables them to prevent conflicts of interest and address potential problems. Similarly, in the design of DAOs, by-laws are essential to impose additional restrictions on different token owners before other token owners can purchase tokens from them. This approach goes beyond simple token voting, as relying solely on voting for all proposals cannot solve all problems and may even create further issues through the passage of "Tyrannical Majority" proposals.
+这引出了一个问题：DAO中的代币和传统公司中的股票是否相同？购买或赚取代币是否等同于投资股票？代币持有者是否被视为投资者或客户？代币是否可以作为投资目的的股票或出售的产品进行比较？
 
-\subsection{``Tokenomics'' vs ``Dividend''}
+在美国SEC监管的真实世界公司中，没有公司仅仅为了向市场出售``股票''而存在，且没有规定就发行10到1000倍的股票是不可行的。``股票''与``产品''之间有明确的区别：``股票''代表公司的所有权，不仅包括资产和市场价值的所有权，还包括通过公司章程、合同和规定概述的特定程序参与公司决策过程的权利。相反，``产品''指的是生产和销售的商品或服务。它可以包括供销售的特定项目或向客户提供的整体产品。本质上，公司通过创建并销售商品或服务作为``产品''来产生收入，同时通过在一级或二级市场发行和销售新股来筹集资金，从而稀释现有股东的所有权。这种机制构成了传统股票市场的核心，推动股东、高管、员工和董事会成员合作创建有形价值，同时从真实商业活动中获利。
 
-For DAOs and other crypto projects (SocialFi, GameFi, or other protocols), tokenomics is often used as a means to attract and retain investors, as compared to dividends. Tokenomics refers to the study of designing and implementing tokens within a cryptocurrency system. It involves creating a token, which is a digital asset used for exchange within a specific cryptocurrency ecosystem. Tokens represent value within the system, enabling the purchase and sale of goods and services, as well as incentivizing desired behaviors. The design of a token's economy is crucial for the overall success of a cryptocurrency, as it determines its utility and value over time. A well-designed token economy helps ensure the long-term viability and stability of the cryptocurrency.
+在大多数代币经济设计中，代币的精确定义往往缺失。许多DAO和加密项目利用代币来吸引和留住投资者，这些代币可以在中心化（CEX）或去中心化（DEX）交易所上交易并具有投票权。然而，在大多数代币经济设计中，代币并不等同于投资目的的股票。首先，在大多数代币经济算法中，核心智能合约持续地铸造新代币作为奖励给SocialFi用户、GameFi用户和DAO投票者。这种大量增加的代币供应导致价值稀释，降低了单个代币的重要性和所有权权重。其次，智能合约通常缺乏保障代币所有者权利的规定或程序，除了“一代币一票”原则，这通常是低效和耗时的。它无法防止联合创始人执行rug pulls，其中他们欺诈性地提取其他股东的资产。最后，正如在各种情况下观察到的，如果联合创始人可以通过“代币经济”方法通过铸造和销售代币筹集足够的资金，他们可能会停止实际的业务扩展，允许他们带着资金逃跑（也称为“rug pull”）并放弃项目。因此，代币不等同于投资目的的股票，项目的“业务”仅围绕“销售代币”，而不是创建和销售有形的商品或服务。因此，出于投资目的购买代币的代币所有者与股票投资者不同，尽管他们相信虚假的``代币经济''方法的幻觉，并期望随着项目增长代币价格升值，这通常产生相反的结果。
 
-This leads us to the question: are tokens in DAOs and crypto projects the same as stocks in traditional companies? Is purchasing or earning tokens equivalent to investing in stocks? Are token holders considered investors or customers? Are tokens comparable to stocks for investment purposes or products for sale?
+在健康和良好监管的股票市场中，大多数公司定期向其股东分配股息。超过80％在标普500指数中上市的公司定期支付股息。分红对于传统股票公司具有重要意义，因为它们允许公司与股东分享其利润。当公司产生利润时，它有多种选择来使用这笔钱。它可以将资金再投资于业务中以促进增长和扩张，偿还债务，或将部分利润以股息形式分配给股东。支付股息有助于公司吸引和留住寻求投资定期收入的投资者。此外，持续的股息支付表明财务稳定性和实力，增强了投资者对公司的信心。一些公司，特别是那些处于高增长行业或优先考虑将利润再投资以推动增长的公司，可能选择不支付股息。
 
-In real-world companies regulated by the U.S. SEC, no company exists solely to sell ``stock'' to the market, and issuing 10 to 1000 times the stock without regulation is not feasible. There is a clear distinction between ``stock'' and ``product'': ``stock'' represents ownership in a company, encompassing not only ownership of assets and market value but also the right to participate in the company's decision-making process through specific procedures outlined in the company's by-laws, contracts, and regulations. Conversely, ``product'' refers to the goods or services produced and sold. It can encompass specific items offered for sale or the overall offering made to customers. In essence, companies generate revenue by creating goods or services as "products" for sale, while raising funds by issuing and selling new stock in primary or secondary markets, thereby diluting the ownership of existing shareholders. This mechanism forms the core of the traditional stock market, driving shareholders, executives, employees, and board members to collaborate and create tangible value while deriving profits from genuine business activities.
+公司选择不支付股息的几个原因。首先，公司可能没有多余的现金来分配给股东。如果公司正在大量投资其运营、研发或其他增长机会，它可能没有可用的现金进行股息支付。在这种情况下，公司可能保留利润以重新投资于业务并推动未来增长。
 
-In most tokenomic designs, a precise definition of tokens is often lacking. Many DAOs and crypto projects utilize tokens to attract and retain investors, and these tokens can be traded on centralized (CEX) or decentralized (DEX) exchanges with voting power. However, tokens are not equivalent to stocks for investment purposes in most tokenomic designs. Firstly, in the majority of tokenomic algorithms, the core smart contract continually mints new tokens as rewards to SocialFi users, GameFi users, and DAO voters. This substantial increase in token supply leads to value dilution, reducing the significance and ownership weight of individual tokens. Secondly, smart contracts generally lack regulations or procedures guaranteeing the rights of token owners, apart from the "one-token one-vote" principle, which is often inefficient and time-consuming. It fails to prevent co-founders from executing rug pulls, in which they fraudulently withdraw assets belonging to other shareholders. Lastly, as observed in various cases, if co-founders can raise sufficient funds by minting and selling tokens through a ``tokenomics'' approach, they are likely to halt actual business expansion, allowing them to abscond with the funds (also known as a "rug pull") and abandon the project. Consequently, tokens are not equivalent to stocks for investment purposes, and the project's "business" revolves solely around "selling tokens" rather than creating and selling tangible goods or services. Consequently, token owners who purchase tokens for investment purposes differ from stock investors, despite believing in the illusion of a false ``tokenomics'' approach and anticipating token price appreciation with project growth, which typically yields opposite outcomes.
+其次，公司可能认为支付股息不是为其股东创造价值的最有效方式。例如，一个快速增长的公司可能认为将利润再投资于业务为股东创造的价值大于分配股息。在这种情况下，公司专注于收入和盈利增长，期望这将导致更高的股价和更好的股东回报。
 
-In a healthy and well-regulated stock market, most companies distribute dividends to their shareholders. Over 80\% of companies listed in the S\&P 500 index pay dividends periodically. Dividends hold significance for traditional stock companies as they allow companies to share their profits with shareholders. When a company generates a profit, it has various options for utilizing that money. It can reinvest the funds in the business to facilitate growth and expansion, pay off debts, or distribute a portion of the profits to shareholders in the form of dividends. Paying dividends helps companies attract and retain investors seeking regular income from their investments. Additionally, consistent dividend payments indicate financial stability and strength, enhancing investor confidence in the company. Some companies, particularly those in high-growth industries or prioritizing reinvestment of profits for fueling growth, may choose not to pay dividends.
+此外，一些公司选择放弃股息以保留资本配置决策的灵活性。通过保留利润而不是支付股息，公司可以利用其现金进行收购、战略投资或抓住其他机会。这为他们提供了对未来的更大控制，并有助于建立更强大和更有韧性的业务。
 
-Several reasons exist for companies opting not to pay dividends. Firstly, a company may lack surplus cash to distribute to shareholders. If a company is heavily investing in its operations, research and development, or other growth opportunities, it may not have available cash for dividend payments. In such cases, the company may retain profits to reinvest in the business and drive future growth.
-
-Secondly, a company may believe that paying dividends is not the most effective way to generate value for its shareholders. For instance, a fast-growing company might believe that reinvesting profits in the business creates more value for shareholders than distributing dividends. In such cases, the company focuses on revenue and earnings growth, expecting this to result in higher share prices and better returns for shareholders.
-
-Furthermore, some companies choose to forgo dividends to retain flexibility in capital allocation decisions. By retaining profits instead of paying dividends, companies can utilize their cash for acquisitions, strategic investments, or seizing other opportunities as they arise. This grants them greater control over their future and aids in building a stronger and more resilient business.
-
-In conclusion, ``tokenomics'' is not the sole or appropriate approach for designing crypto projects or DAOs. Dividends offer a healthier and more stable method to stabilize token/stock prices in the market, as opposed to "infinitely minting tokens." However, dividends are not widely used in current crypto projects.
-
-
+总之，“代币经济”不是设计加密项目或DAO的唯一或适当的方法。与“无限制铸造代币”相比，股息提供了一种更健康和更稳定的方法来稳定市场中的代币/股票价格。然而，股息在当前的加密项目中并不广泛使用。
 
 \end{document}
