--- a/source/sub_memberships.tex
+++ b/source/sub_memberships.tex
@@ -1,33 +1,31 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 
-\section{Memberships}
+\section{成员资格}
 
-In every company, in addition to members such as the board of directors, shareholders, executives, there are also numerous employees, contractors, interns, customers, suppliers, and so on. They may not hold any first-level tokens or company shares, but their payroll, orders, subscription fees, and other functionalities require batch management. Therefore, membership is another set of convenient tools for use in the DARC protocol.
+在每个公司中，除了董事会成员、股东、高管等成员外，还有许多员工、合同工、实习生、客户、供应商等。他们可能不持有任何一级代币或公司股份，但他们的工资、订单、订阅费和其他功能需要批量管理。因此，成员资格是另一套用于DARC协议中的便捷工具。
 
+表 \ref{table:1} 是DARC X咨询公司的一个分层成员资格结构示例。在这个表中，我们定义了6个级别：联合创始人、重要股东、高管、经理、员工和离职员工。我们可以基于这个成员资格表为DARC X定义一些插件。
 
+\textbf{规则 1}：我们需要限制联合创始人在未通知高管的情况下出售大量股票。如果操作者是一个拥有“联合创始人”角色的地址，并且操作是出售超过100000级别-0代币，这个操作需要得到所有董事会成员的批准。
 
-Table \ref{table:1} is an example of a hierarchical membership structure of the DARC X, a consulting company. In this table, we define 6 levels: co-founder, substantial shareholder, executive, manager, employee and departed employee. And we can define some plugins for DARC X based on this membership table.
-
-\textbf{Rule 1}: We need to limit the co-founders from selling a large amount of stock without notifications to the executives. If the operator is an address with a "co-founder" role and operation is selling more than 100000 level-0 tokens, this operation needs to be approved by all board members.
-
-\textbf{Rule 2}: We provide 10 ETH per month as the salary for both employee-level and manager-level address (level 4 \& 5).
+\textbf{规则 2}：我们为员工级别和经理级别的地址（级别4和5）提供每月10 ETH的工资。
 
 \begin{table}[h!]
 \centering
 \begin{tabular}{||c c||} 
  \hline
- Level & Role \\ [0.5ex] 
+ 级别 & 角色 \\ [0.5ex] 
  \hline\hline
- 1 & Co-founder \\ 
- 2 & Substantial Shareholder \\
- 3 & Executive \\
- 4 & Manager \\
- 5 & Employee \\
- 6 & Departed Employee \\ [1ex] 
+ 1 & 联合创始人 \\ 
+ 2 & 重要股东 \\
+ 3 & 高管 \\
+ 4 & 经理 \\
+ 5 & 员工 \\
+ 6 & 离职员工 \\ [1ex] 
  \hline
 \end{tabular}
-\caption{A hierarchical membership structure}
+\caption{一个分层成员资格结构}
 \label{table:1}
 \end{table}
 
@@ -35,25 +33,25 @@ Table \ref{table:1} is an example of a hierarchical membership structure of the 
 \centering
 \begin{tabular}{||c c c c||} 
  \hline
- Address & Role & Name & IsSuspended \\ [0.5ex] 
+ 地址 & 角色 & 名称 & 是否暂停 \\ [0.5ex] 
  \hline\hline
- 0x0AC..03 & 1 (Co-founder) & Ann & No \\
- 0x156..21 & 2 (Substantial Sharehoulder) & Banana Capital & No \\
- 0x918..1B & 3 (Executive) & Tom & No \\
- 0x4E1..90 & 4 (Manager) & Jack & No \\
- 0x510..0B & 5 (Employee) & Bob & No \\
- 0x113..C7 & 6 (Departed Employee) & Tim & No \\ [1ex] 
+ 0x0AC..03 & 1 (联合创始人) & Ann & 否 \\
+ 0x156..21 & 2 (重要股东) & Banana Capital & 否 \\
+ 0x918..1B & 3 (高管) & Tom & 否 \\
+ 0x4E1..90 & 4 (经理) & Jack & 否 \\
+ 0x510..0B & 5 (员工) & Bob & 否 \\
+ 0x113..C7 & 6 (离职员工) & Tim & 否 \\ [1ex] 
  \hline
 \end{tabular}
-\caption{A membership table of DARC X}
+\caption{DARC X的成员资格表}
 \label{table:2}
 \end{table}
 
-Now we analyze the rules above and design plugins in By-law Script.
+现在我们分析上述规则并设计By-law脚本中的插件。
 
-For \textbf{Rule 1}, we need to make sure that if the current operation is "transfer token", the level of token is 0, and the number of token is more than 100000, and the address is in the membership table with a role level equals to 1, the program will be suspended and waiting for a voting process. The voting process is defined and saved as \textbf{voting rule 1}, which requires all the holders of level-3 token to vote in 1 hour. There are 5 level-3 tokens in total, and each board member holds 1 token. If all the 5 board members vote yes in 1 hour, this operation will be approved. Otherwise, the whole program will be rejected and the operation will fail.
+对于\textbf{规则 1}，我们需要确保如果当前操作是“转移代币”，代币的级别是0，并且代币数量超过100000，并且地址在成员资格表中角色级别等于1，程序将被暂停并等待投票过程。投票过程被定义并保存为\textbf{投票规则 1}，要求所有持有级别-3代币的持有者在1小时内投票。总共有5个级别-3代币，每个董事会成员持有1个代币。如果所有5个董事会成员在1小时内投票同意，此操作将被批准。否则，整个程序将被拒绝，操作将失败。
 
-Here is an example plugin for \textbf{Rule 1} designed in By-law Script:
+这里是为\textbf{规则 1}设计的By-law脚本中的示例插件：
 
 \begin{verbatim}
 const plugin_Rule_1 = 
@@ -69,9 +67,9 @@ const plugin_Rule_1 =
 }
 \end{verbatim}
 
-For \textbf{Rule 2}, we need to make sure that if the operator is assigned with a role level equals 4 or 5, the operation is adding withdrawable balance, the total amount of operation is less than or equal to 10 ETH(or 10000000000000000000 wei), and the operator did the same operation in more than 30 days(or 2592000 seconds), this operation will be approved and sandbox check can be skipped for this operation.
+对于\textbf{规则 2}，我们需要确保如果操作者被分配的角色级别等于4或5，操作是增加可提现余额，操作的总金额小于或等于10 ETH（或10000000000000000000 wei），并且操作者在超过30天（或2592000秒）内做了同样的操作，这个操作将被批准，并且可以跳过此操作的沙盒检查。
 
-Here is an example plugin for \textbf{Rule 2} designed in By-law Script:
+这里是为\textbf{规则 2}设计的By-law脚本中的示例插件：
 
 \begin{verbatim}
 const plugin_Rule_2 = 
